--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "php": ">=5.3.23",
         "zendframework/zend-config": "2.*",
+        "zendframework/zend-console": "2.*",
         "zendframework/zend-eventmanager": "2.*",
         "zendframework/zend-http": "2.*",
         "zendframework/zend-loader": "2.*",
